# benying

./: .gitignore  docker-compose.yml  pyproject.toml
.github/workflows/: build-images.yml
deploy/: README.md  k8s-dev.yaml
libs/: README.md
memory-bank/: README.md  architecture.md  implementation-plan.md  progress.md  tech-stack.md  实现计划.md  已完成进度.md  微服务拆分.md  技术栈.md  架构说明.md  项目目标文档.md
memory-bank/service-designs/: README.md  agent-core.md  agent-runtime.md  control-plane.md  knowledge-service.md  model-gateway.md  platform-api.md  sub-agent-management.md  tool-executor.md  tool-gateway.md  web-portal.md
scripts/: new_service.sh  run_step2_tests.sh  run_step3_tests.sh
services/: README.md
services/go-service-template/: Dockerfile  go.mod
services/go-service-template/config/: dev.env  staging.env
services/python-service-template/: Dockerfile  requirements.txt
services/python-service-template/app/: config.py  main.py
services/python-service-template/config/: .env.example
services/python-service-template/tests/: conftest.py  test_config.py  test_healthz.py
src/go/: go.mod
src/go/shared/: request_id.go  runtime.go  server.go  settings.go  settings_test.go
src/services/: __init__.py
src/services/knowledge/: main.py  settings.py
src/services/model_gateway/: main.py  settings.py
src/services/orchestrator/: __main__.py  main.py  settings.py
src/services/tools/: main.py  settings.py
src/shared/: app_factory.py  runtime.py  settings.py
tests/: test_health_checks.py  test_local_orchestration.py  test_service_scaffold.py
(+11 files in other folders)
